# fastapi-study-ca

./: alembic.ini  database.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_11_07_1641-17eb060d36f3_add_user_table.py  2024_11_07_2045-d38953fa75c0_user_add_memo.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
